# ROS-Level-1

./: README.md
install/: setup.ps1  setup.zsh
install/activity_custom_interface/lib/activity_custom_interface/: battery  led_panel
install/activity_custom_interface/share/activity_custom_interface/: package.bash  package.dsv  package.sh  package.zsh
install/activity_service/lib/activity_service/: number_counter  number_publisher
install/activity_service/share/activity_service/: package.bash  package.dsv
install/activity_topic_node/lib/activity_topic_node/: number_counter
install/activity_topic_node/share/activity_topic_node/: package.bash  package.dsv  package.ps1
install/custom_msg_cpp/lib/custom_msg_cpp/: hardware_status_publisher
install/custom_msg_cpp/share/custom_msg_cpp/: local_setup.dsv  package.xml  package.zsh
install/custom_msg_cpp/share/custom_msg_cpp/cmake/: custom_msg_cppConfig.cmake
install/custom_msg_py/share/custom_msg_py/: package.sh  package.xml  package.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node_1  cpp_node_2
install/my_cpp_pkg/share/my_cpp_pkg/: local_setup.sh
install/my_py_pkg/lib/my_py_pkg/: py_node_1  py_node_2  py_node_3
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh
install/my_robot_interfaces/include/my_robot_interfaces/msg/: rosidl_typesupport_microxrcedds_c__visibility_control.h
install/my_robot_interfaces/share/my_robot_interfaces/: package.sh
install/my_robot_interfaces/share/my_robot_interfaces/msg/: LedStateArray.idl
install/service_cpp/lib/service_cpp/: add_two_ints_client_no_oop
install/service_cpp/share/service_cpp/cmake/: service_cppConfig.cmake
install/service_py/lib/service_py/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server
install/service_py/share/service_py/: package.bash  package.dsv
install/try_topic_cpp/share/try_topic_cpp/: package.bash  package.zsh
install/try_topic_py/lib/try_topic_py/: robot_news_station  smartphone
install/try_topic_py/share/try_topic_py/: package.ps1  package.zsh
ros2_ws/install/: local_setup.sh  setup.bash  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/activity_topic_node/: setup.cfg  setup.py
ros2_ws/src/custom_msg_cpp/src/: hw_status_publisher.cpp
ros2_ws/src/my_cpp_pkg/src/: my_second_node.cpp  templateNode.cpp
ros2_ws/src/my_py_pkg/: setup.py
ros2_ws/src/my_robot_bringup/: CMakeLists.txt
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt
ros2_ws/src/service_cpp/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
ros2_ws/src/try_topic_cpp/src/: robot_news_station.cpp
ros2_ws/src/try_topic_py/: setup.cfg  setup.py
ros2_ws/src/try_topic_py/try_topic_py/: smartphone.py
src/activity_custom_interface/: setup.cfg  setup.py
src/activity_service/: package.xml  setup.cfg  setup.py
src/activity_topic_node/: package.xml
src/activity_topic_node/activity_topic_node/: number_counter.py
src/custom_msg_cpp/: CMakeLists.txt
src/custom_msg_py/: setup.cfg  setup.py
src/custom_msg_py/custom_msg_py/: hw_status_publisher.py
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: my_first_node.cpp
src/my_robot_bringup/launch/: number_app.launch.py
src/my_robot_interfaces/: package.xml
src/service_cpp/: CMakeLists.txt
src/service_cpp/src/: add_two_ints_client_no_oop.cpp
src/service_py/: package.xml  setup.py
src/try_topic_cpp/: CMakeLists.txt
src/try_topic_cpp/src/: smartphone.cpp
src/try_topic_py/: package.xml
(+72 files in other folders)
